# just-dashboards

./: .gitignore  Cargo.toml  Dockerfile  README.md
demo-dashboard/: Cargo.toml
demo-dashboard/src/: main.rs
src/: dashboard.rs  main.rs
